compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__incomplete_pattern_does_not_show_structure_of_internal_type_outside_of_its_module.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "import wibble.{type Wibble}\n\npub fn go(wibble: Wibble) {\n  case wibble {}\n}"
---
----- SOURCE CODE
-- wibble.gleam
@internal
            pub type Wibble { Wibble Wobble Woo }

-- main.gleam
import wibble.{type Wibble}

pub fn go(wibble: Wibble) {
  case wibble {}
}

----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:4:3
  │
4 │   case wibble {}
  │   ^^^^^^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _
